[VEG-211] docs, tests: add filtering by stockStatus
